tests/miz/pass/types/pass_type_elaboration_multiple_reserve_declaration_equality_001.miz
reserve x for set;
reserve y for set;
theorem MultipleReserveDeclarationEqualityPayloadBoundary: x = y;
