tests/miz/fail/substitution/fail_substitution_alpha_conversion_001.miz
scheme AlphaConversion {
  P[set]
}:
  for x being set holds P[x]
provided
  for x being set holds P[y];
